[gd_scene load_steps=16 format=4 uid="uid://hug7d7mo5xj1"]

[ext_resource type="Script" uid="uid://b7rqta5v53in7" path="res://Scripts/Game Manager/Exit.gd" id="1_3toyu"]
[ext_resource type="Texture2D" uid="uid://dgd7d3ku8sseo" path="res://Art/Tilemap/grass.png" id="3_ioxke"]
[ext_resource type="Texture2D" uid="uid://ctswc0ls4w741" path="res://Art/Tilemap/background.png" id="4_f6i8f"]
[ext_resource type="Script" uid="uid://bk2n40ntp7sqg" path="res://Scripts/Game Manager/quack_pickup.gd" id="4_pjvod"]
[ext_resource type="Texture2D" uid="uid://cok4d3c6uxjqy" path="res://Art/Duck/quack.png" id="5_pjvod"]
[ext_resource type="FontFile" uid="uid://coacccvk10kbs" path="res://Art/Font/Tiny5-Regular.ttf" id="6_f6i8f"]
[ext_resource type="Script" uid="uid://c524gyagitieh" path="res://Scripts/Game Manager/floating_text.gd" id="7_31wo2"]
[ext_resource type="Shader" uid="uid://c3t7g2xw7cmso" path="res://Shaders/vine_swing.gdshader" id="8_31wo2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwj6k"]
size = Vector2(15.6875, 482)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rnya8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f6i8f"]
texture = SubResource("CompressedTexture2D_rnya8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_31wo2"]
texture = ExtResource("3_ioxke")
margins = Vector2i(4, 4)
separation = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
3:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:2/0 = 0
4:2/0 = 0
3:1/0 = 0
3:2/0 = 0
4:0/0 = 0
5:0/0 = 0
4:5/0 = 0
3:5/0 = 0
3:4/0 = 0
4:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:11/0 = 0

[sub_resource type="TileSet" id="TileSet_cg4ff"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_f6i8f")
sources/1 = SubResource("TileSetAtlasSource_31wo2")

[sub_resource type="CircleShape2D" id="CircleShape2D_f6i8f"]
radius = 13.1529

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w1sat"]
shader = ExtResource("8_31wo2")
shader_parameter/time_offset = 0.0
shader_parameter/sway_speed = 2.0
shader_parameter/sway_strength = 5.0
shader_parameter/sway_frequency = 10.0

[node name="Node2D" type="Node2D"]

[node name="Exit" type="Area2D" parent="."]
position = Vector2(638, -2)
script = ExtResource("1_3toyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(10, -238)
shape = SubResource("RectangleShape2D_uwj6k")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(12, -190)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAABAAAAAQABAAEAAAACAAAAAQABAAEAAAADAAAAAQABAAEAAAAEAAAAAQABAAEAAAAJAAAAAQABAAEAAAAKAAAAAQABAAAAAAALAAAAAQABAAAAAAAMAAAAAQABAAAAAAANAAAAAQABAAAAAAAOAAAAAQABAAAAAAAPAAAAAQABAAAAAAAAAAIAAQABAAEAAAABAAIAAQABAAEAAAACAAIAAQABAAEAAAADAAIAAQABAAEAAAAEAAIAAQABAAEAAAARAAIAAQABAAEAAAASAAIAAQABAAEAAAAQAAIAAQABAAEAAAAPAAIAAQABAAEAAAAOAAIAAQABAAEAAAANAAIAAQABAAEAAAAMAAIAAQABAAEAAAALAAIAAQABAAEAAAAKAAIAAQABAAEAAAAJAAIAAQABAAEAAAAIAAIAAQABAAEAAAAHAAIAAQABAAEAAAAGAAIAAQABAAEAAAAFAAIAAQABAAEAAAAAAAMAAQABAAEAAAABAAMAAQABAAEAAAACAAMAAQABAAEAAAADAAMAAQABAAEAAAAEAAMAAQABAAEAAAAFAAMAAQABAAEAAAAGAAMAAQABAAEAAAAHAAMAAQABAAEAAAAIAAMAAQABAAEAAAAJAAMAAQABAAEAAAAKAAMAAQABAAEAAAALAAMAAQABAAEAAAAMAAMAAQABAAEAAAANAAMAAQABAAEAAAAOAAMAAQABAAEAAAAPAAMAAQABAAEAAAAQAAMAAQABAAEAAAARAAMAAQABAAEAAAASAAMAAQABAAEAAAASAAQAAQABAAEAAAARAAQAAQABAAEAAAAQAAQAAQABAAEAAAAPAAQAAQABAAEAAAAOAAQAAQABAAEAAAANAAQAAQABAAEAAAAMAAQAAQABAAEAAAALAAQAAQABAAEAAAAKAAQAAQABAAEAAAAJAAQAAQABAAEAAAAIAAQAAQABAAEAAAAHAAQAAQABAAEAAAAGAAQAAQABAAEAAAAFAAQAAQABAAEAAAAEAAQAAQABAAEAAAADAAQAAQABAAEAAAACAAQAAQABAAEAAAABAAQAAQABAAEAAAAAAAQAAQABAAEAAAAYAAAAAQABAAAAAAAZAAAAAQABAAAAAAAaAAAAAQABAAAAAAAbAAAAAQABAAAAAAAcAAAAAQABAAAAAAAdAAAAAQABAAAAAAAeAAAAAQABAAAAAAAfAAAAAQABAAAAAAAgAAAAAQABAAAAAAAhAAAAAQABAAAAAAAiAAAAAQABAAAAAAAjAAAAAQABAAAAAAAkAAAAAQABAAAAAAATAAIAAQABAAEAAAATAAMAAQABAAEAAAATAAQAAQABAAEAAAAUAAIAAQABAAEAAAAUAAMAAQABAAEAAAAUAAQAAQABAAEAAAAVAAEAAQABAAEAAAAVAAIAAQABAAEAAAAVAAMAAQABAAEAAAAVAAQAAQABAAEAAAAWAAEAAQABAAEAAAAWAAIAAQABAAEAAAAWAAMAAQABAAEAAAAWAAQAAQABAAEAAAAXAAEAAQABAAEAAAAXAAIAAQABAAEAAAAXAAMAAQABAAEAAAAXAAQAAQABAAEAAAAYAAEAAQABAAEAAAAYAAIAAQABAAEAAAAYAAMAAQABAAEAAAAYAAQAAQABAAEAAAAZAAEAAQABAAEAAAAZAAIAAQABAAEAAAAZAAMAAQABAAEAAAAZAAQAAQABAAEAAAAaAAEAAQABAAEAAAAaAAIAAQABAAEAAAAaAAMAAQABAAEAAAAaAAQAAQABAAEAAAAbAAEAAQABAAEAAAAbAAIAAQABAAEAAAAbAAMAAQABAAEAAAAbAAQAAQABAAEAAAAcAAEAAQABAAEAAAAcAAIAAQABAAEAAAAcAAMAAQABAAEAAAAcAAQAAQABAAEAAAAdAAEAAQABAAEAAAAdAAIAAQABAAEAAAAdAAMAAQABAAEAAAAdAAQAAQABAAEAAAAeAAEAAQABAAEAAAAeAAIAAQABAAEAAAAeAAMAAQABAAEAAAAeAAQAAQABAAEAAAAfAAEAAQABAAEAAAAfAAIAAQABAAEAAAAfAAMAAQABAAEAAAAfAAQAAQABAAEAAAAgAAEAAQABAAEAAAAgAAIAAQABAAEAAAAgAAMAAQABAAEAAAAgAAQAAQABAAEAAAAhAAEAAQABAAEAAAAhAAIAAQABAAEAAAAhAAMAAQABAAEAAAAhAAQAAQABAAEAAAAiAAEAAQABAAEAAAAiAAIAAQABAAEAAAAiAAMAAQABAAEAAAAiAAQAAQABAAEAAAAjAAEAAQABAAEAAAAjAAIAAQABAAEAAAAjAAMAAQABAAEAAAAjAAQAAQABAAEAAAAkAAEAAQABAAEAAAAkAAIAAQABAAEAAAAkAAMAAQABAAEAAAAkAAQAAQABAAEAAAD//wQAAQABAAEAAAD//wMAAQABAAEAAAD//wIAAQABAAEAAAD//wEAAQABAAEAAAD//wAAAQABAAEAAAD/////AQACAAEAAAD///7/AQACAAEAAAD///3/AQACAAEAAAD///z/AQACAAEAAAD///v/AQACAAEAAAD///r/AQACAAEAAAD///n/AQACAAEAAAD///j/AQACAAEAAAD///f/AQACAAEAAAD///b/AQACAAEAAAD///X/AQACAAEAAAD///T/AQACAAEAAAD///P/AQACAAEAAAD///L/AQACAAEAAAD///H/AQACAAEAAAD//+L/AQACAAEAAAD//+P/AQACAAEAAAD//+T/AQACAAEAAAD//+j/AQACAAEAAAD//+n/AQACAAEAAAD//+r/AQACAAEAAAD//+v/AQACAAEAAAD//+z/AQACAAEAAAD//+3/AQACAAEAAAD//+7/AQACAAEAAAD//+//AQACAAEAAAD///D/AQACAAEAAAD//+X/AQACAAEAAAD//+b/AQACAAEAAAD//+f/AQACAAEAAAAlAAAAAQABAAAAAAAmAAAAAQABAAAAAAAlAAEAAQABAAEAAAAmAAEAAQABAAEAAAAnAAEAAQABAAEAAAAnAAIAAQABAAEAAAAnAAMAAQABAAEAAAAnAAQAAQABAAEAAAAmAAQAAQABAAEAAAAlAAQAAQABAAEAAAAlAAMAAQABAAEAAAAmAAMAAQABAAEAAAAmAAIAAQABAAEAAAAlAAIAAQABAAEAAAAoAAQAAQABAAEAAAAoAAMAAQABAAEAAAAoAAIAAQABAAEAAAAoAAEAAQABAAEAAAAoAAAAAQABAAIAAAAQAAAAAQABAAAAAAARAAAAAQABAAAAAAASAAAAAQABAAAAAAATAAAAAQABAAAAAAAUAAAAAQABAAAAAAAVAAAAAQABAAAAAAAWAAAAAQABAAAAAAAXAAAAAQABAAAAAAAFAAAAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAAAAEAAQABAAEAAAABAAEAAQABAAEAAAACAAEAAQABAAEAAAADAAEAAQABAAEAAAAEAAEAAQABAAEAAAAFAAEAAQABAAEAAAAGAAEAAQABAAEAAAAHAAEAAQABAAEAAAAIAAEAAQABAAEAAAAJAAEAAQABAAEAAAAKAAEAAQABAAEAAAALAAEAAQABAAEAAAAMAAEAAQABAAEAAAANAAEAAQABAAEAAAAOAAEAAQABAAEAAAAPAAEAAQABAAEAAAAQAAEAAQABAAEAAAARAAEAAQABAAEAAAASAAEAAQABAAEAAAATAAEAAQABAAEAAAAUAAEAAQABAAEAAAACAP//AQABAAEAAAADAP//AQABAAEAAAAaAP//AQABAAMAAAAbAP//AQACAAMAAAAlAP//AQACAAMAAAAmAP//AQACAAMAAAAnAP//AQABAAMAAAARAP//AQABAAMAAAAQAP//AQACAAMAAAAPAP//AQACAAMAAAAnAAAAAQABAAAAAAApAOL/AQABAAEAAAApAOP/AQABAAEAAAApAOT/AQABAAEAAAApAOX/AQABAAEAAAApAOb/AQABAAEAAAApAOf/AQABAAEAAAApAOj/AQABAAEAAAApAOn/AQABAAEAAAApAOr/AQABAAEAAAApAOv/AQABAAEAAAApAOz/AQABAAEAAAApAO3/AQABAAEAAAApAO7/AQABAAEAAAApAO//AQABAAEAAAApAPD/AQABAAEAAAApAPH/AQABAAEAAAApAPL/AQABAAEAAAApAPP/AQABAAEAAAApAPT/AQABAAEAAAApAPX/AQABAAEAAAApAPb/AQABAAEAAAApAPf/AQABAAEAAAApAPj/AQABAAEAAAApAPn/AQABAAEAAAApAPr/AQABAAEAAAApAPv/AQABAAEAAAApAPz/AQABAAEAAAApAP3/AQABAAEAAAApAP7/AQABAAEAAAApAP//AQABAAEAAAApAAAAAQABAAEAAAApAAEAAQABAAEAAAApAAIAAQABAAEAAAApAAMAAQABAAEAAAApAAQAAQABAAEAAAAAAP//AQABAAEAAAAAAP7/AQABAAEAAAAAAP3/AQABAAEAAAAAAPz/AQABAAEAAAAAAPv/AQABAAEAAAAAAPr/AQABAAEAAAAAAPn/AQABAAEAAAAAAPj/AQABAAEAAAAAAPf/AQABAAEAAAAAAPb/AQABAAEAAAABAPX/AQABAAAAAAAAAPX/AQABAAAAAAABAPb/AQABAAEAAAABAPf/AQABAAEAAAABAPj/AQABAAEAAAABAPn/AQABAAEAAAABAPr/AQABAAEAAAABAPv/AQABAAEAAAABAPz/AQABAAEAAAABAP3/AQABAAEAAAABAP7/AQABAAEAAAABAP//AQABAAEAAAAEAP//AQABAAEAAAAFAP//AQABAAEAAAAGAP//AQABAAEAAAAHAP//AQABAAEAAAAIAP//AQABAAEAAAAIAP7/AQABAAEAAAAJAP7/AQACAAEAAAAJAP//AQACAAEAAAAHAP7/AQABAAEAAAAGAP7/AQABAAEAAAAFAP7/AQABAAEAAAAEAP7/AQABAAEAAAADAP7/AQABAAEAAAACAP7/AQABAAEAAAACAP3/AQABAAEAAAADAP3/AQABAAEAAAAEAP3/AQABAAEAAAAFAP3/AQABAAEAAAAGAP3/AQABAAEAAAAHAP3/AQABAAEAAAAIAP3/AQABAAEAAAAJAP3/AQACAAEAAAAJAPz/AQACAAEAAAAIAPz/AQABAAEAAAAHAPz/AQABAAEAAAAGAPz/AQABAAEAAAAFAPz/AQABAAEAAAAEAPz/AQABAAEAAAADAPz/AQABAAEAAAACAPz/AQABAAEAAAACAPv/AQABAAEAAAADAPv/AQABAAEAAAAEAPv/AQABAAEAAAAFAPv/AQABAAEAAAAGAPv/AQABAAEAAAAHAPv/AQABAAEAAAAIAPv/AQABAAEAAAAJAPv/AQACAAEAAAAJAPr/AQACAAEAAAAIAPr/AQABAAEAAAAHAPr/AQABAAEAAAAGAPr/AQABAAEAAAAFAPr/AQABAAEAAAAEAPr/AQABAAEAAAADAPr/AQABAAEAAAADAPn/AQABAAEAAAACAPn/AQABAAEAAAACAPj/AQABAAEAAAADAPj/AQABAAEAAAAEAPj/AQABAAEAAAAFAPj/AQABAAEAAAAGAPj/AQABAAEAAAAHAPj/AQABAAEAAAAIAPj/AQABAAEAAAACAPX/AQABAAAAAAACAPb/AQABAAEAAAACAPf/AQABAAEAAAACAPr/AQABAAEAAAADAPX/AQABAAAAAAADAPb/AQABAAEAAAADAPf/AQABAAEAAAAEAPX/AQABAAAAAAAEAPb/AQABAAEAAAAEAPf/AQABAAEAAAAEAPn/AQABAAEAAAAFAPX/AQABAAAAAAAFAPb/AQABAAEAAAAFAPf/AQABAAEAAAAFAPn/AQABAAEAAAAGAPX/AQABAAAAAAAGAPb/AQABAAEAAAAGAPf/AQABAAEAAAAGAPn/AQABAAEAAAAHAPX/AQABAAAAAAAHAPb/AQABAAEAAAAHAPf/AQABAAEAAAAHAPn/AQABAAEAAAAIAPX/AQABAAAAAAAIAPb/AQABAAEAAAAIAPf/AQABAAEAAAAIAPn/AQABAAEAAAAJAPX/AQACAAAAAAAJAPb/AQACAAEAAAAJAPf/AQACAAEAAAAJAPj/AQACAAEAAAAJAPn/AQACAAEAAAAIAPT/AQABAAMAAAAHAPT/AQAAAAMAAAAAAPT/AQAAAAMAAAAVAPX/AQAAAAAAAAAVAPb/AQAAAAEAAAAVAPf/AQAAAAEAAAAVAPj/AQAAAAIAAAAWAPT/AQACAAMAAAAWAPX/AQABAAAAAAAWAPb/AQABAAEAAAAWAPf/AQABAAEAAAAWAPj/AQABAAIAAAAXAPX/AQABAAAAAAAXAPb/AQABAAEAAAAXAPf/AQABAAEAAAAXAPj/AQABAAIAAAAYAPX/AQABAAAAAAAYAPb/AQABAAEAAAAYAPf/AQABAAEAAAAYAPj/AQABAAIAAAAZAPX/AQABAAAAAAAZAPb/AQABAAEAAAAZAPf/AQABAAEAAAAZAPj/AQABAAIAAAAaAPX/AQABAAAAAAAaAPb/AQABAAEAAAAaAPf/AQABAAEAAAAaAPj/AQABAAIAAAAbAPX/AQABAAAAAAAbAPb/AQABAAEAAAAbAPf/AQABAAEAAAAbAPj/AQABAAIAAAAcAPT/AQABAAMAAAAcAPX/AQABAAAAAAAcAPb/AQABAAEAAAAcAPf/AQABAAEAAAAcAPj/AQABAAIAAAAdAPT/AQACAAMAAAAdAPX/AQABAAAAAAAdAPb/AQABAAEAAAAdAPf/AQABAAEAAAAdAPj/AQABAAIAAAAeAPX/AQACAAAAAAAeAPb/AQACAAEAAAAeAPf/AQACAAEAAAAeAPj/AQACAAIAAAAXAPn/AQAFAAMAAAAWAPn/AQAGAAMAAAAZAPn/AQAFAAMAAAAeAPn/AQAFAAMAAAA=")
tile_set = SubResource("TileSet_cg4ff")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAnAOL/AQAAAAEAAAAnAOP/AQAAAAEAAAAnAOT/AQAAAAEAAAAnAOX/AQAAAAEAAAAnAOb/AQAAAAEAAAAnAOf/AQAAAAEAAAAnAOj/AQAAAAEAAAAnAOn/AQAAAAEAAAAnAOr/AQAAAAEAAAAnAOv/AQAAAAEAAAAnAOz/AQAAAAEAAAAnAO3/AQAAAAEAAAAnAO7/AQAAAAEAAAAnAO//AQAAAAEAAAAnAPD/AQAAAAEAAAAnAPH/AQAAAAEAAAAnAPL/AQAAAAEAAAAnAPP/AQAAAAEAAAAnAPT/AQAAAAEAAAAnAPX/AQAAAAEAAAAnAPb/AQAAAAEAAAAnAPf/AQAAAAEAAAAnAPj/AQAAAAEAAAAnAPn/AQAAAAEAAAAnAPr/AQAAAAEAAAAnAPv/AQAAAAEAAAAnAPz/AQAAAAEAAAAnAP3/AQAAAAEAAAAnAP7/AQAAAAEAAAAnAP//AQAAAAEAAAAoAOL/AQABAAEAAAAoAOP/AQABAAEAAAAoAOT/AQABAAEAAAAoAOX/AQABAAEAAAAoAOb/AQABAAEAAAAoAOf/AQABAAEAAAAoAOj/AQABAAEAAAAoAOn/AQABAAEAAAAoAOr/AQABAAEAAAAoAOv/AQABAAEAAAAoAOz/AQABAAEAAAAoAO3/AQABAAEAAAAoAO7/AQABAAEAAAAoAO//AQABAAEAAAAoAPD/AQABAAEAAAAoAPH/AQABAAEAAAAoAPL/AQABAAEAAAAoAPP/AQABAAEAAAAoAPT/AQABAAEAAAAoAPX/AQABAAEAAAAoAPb/AQABAAEAAAAoAPf/AQABAAEAAAAoAPj/AQABAAEAAAAoAPn/AQABAAEAAAAoAPr/AQABAAEAAAAoAPv/AQABAAEAAAAoAPz/AQABAAEAAAAoAP3/AQABAAEAAAAoAP7/AQABAAEAAAAoAP//AQABAAEAAAAnAAAAAQABAAEAAAAoAAAAAQABAAEAAAA=")
tile_set = SubResource("TileSet_cg4ff")

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(397, -249)
texture = ExtResource("4_f6i8f")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, -130)
zoom = Vector2(3, 3)

[node name="QuackPickup" type="Node2D" parent="."]
position = Vector2(417, -194)

[node name="Area2D" type="Area2D" parent="QuackPickup"]
script = ExtResource("4_pjvod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuackPickup/Area2D"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_f6i8f")

[node name="Sprite2D" type="Sprite2D" parent="QuackPickup/Area2D"]
position = Vector2(-1, -1)
texture = ExtResource("5_pjvod")

[node name="Label" type="Label" parent="."]
offset_left = 362.0
offset_top = -219.0
offset_right = 648.0
offset_bottom = -196.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("6_f6i8f")
text = "Looks like you need to grab this!"
vertical_alignment = 1
script = ExtResource("7_31wo2")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 378.0
offset_top = -219.0
offset_right = 664.0
offset_bottom = -196.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("6_f6i8f")
text = "Press Space to quack!"
vertical_alignment = 1
script = ExtResource("7_31wo2")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
material = SubResource("ShaderMaterial_w1sat")
tile_map_data = PackedByteArray("AAAYAPn/AQADAAAAAAAYAPr/AQADAAEAAAAYAPv/AQADAAMAAAAVAPn/AQAEAAAAAAAVAPr/AQAEAAMAAAAdAPn/AQAFAAAAAAAdAPr/AQAFAAIAAAAXAPn/AQALAAsAAAAXAPr/AQALAAsAAAAWAPr/AQALAAsAAAA=")
tile_set = SubResource("TileSet_cg4ff")

[connection signal="body_entered" from="Exit" to="Exit" method="_on_body_entered"]
[connection signal="body_entered" from="QuackPickup/Area2D" to="QuackPickup/Area2D" method="_on_body_entered"]
